--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -9,13 +9,13 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Name</label>
+        <label th:form="name">Name</label>
         <input class="form-control" th:field="${job.name}" />
         <span th:errors="${job.name}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="employer">Employer</label>
+        <label th:form="employer">Employer</label>
         <select name="employerId">
             <option th:each="employer : ${employers}"
                     th:text="${employer.name}"
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group">
-        <label th:for="skills">Skills</label>
+        <label th:form="skills">Skills</label>
         <th:block th:each="skill : ${skills}">
             <input type="checkbox" name="skills" th:value="${skill.id}">
             <label th:text="${skill.name}"></label>
