--- a/src/main/resources/templates/employers/add.html
+++ b/src/main/resources/templates/employers/add.html
@@ -8,13 +8,13 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Employer Name</label>
+        <label th:form="name">Employer Name</label>
         <input class="form-control" th:field="${employer.name}" />
         <span th:errors="${employer.name}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="location">Employer Location</label>
+        <label th:form="location">Employer Location</label>
         <input class="form-control" th:field="${employer.location}" />
         <span th:errors="${employer.location}" class="error"></span>
     </div>
