--- a/src/main/resources/templates/skills/add.html
+++ b/src/main/resources/templates/skills/add.html
@@ -8,13 +8,13 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Skill Name</label>
+        <label th:form="name">Skill Name</label>
         <input class="form-control" th:field="${skill.name}" />
         <span th:errors="${skill.name}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="description">Skill Description</label>
+        <label th:form="description">Skill Description</label>
         <input class="form-control" th:field="${skill.description}" />
         <span th:errors="${skill.description}" class="error"></span>
     </div>
